@@ -2,6 +2,7 @@
 - added slash command for automatically caging pets that are owned 3 times
 - added reputation tracking
 - split up the code into separate files for each functionality to make maintaining and expanding easier
+- fixed currencies being displayed even when they were disabled
 
   version 2.9.1
 - fixed a bug in restoring nameplates while in combat
